tests/unescaped-newline-in-string.c
struct foobar
{
    int a;
    int b;
    itn c;
    int d;
};

int
main(int argc, char** argv)
{
    char const* foo = "And this is a very long string
which has no backslashes and therefore is incorrect";

    // This is a long file so that it does not fit in the first 64-or-so bytes
    return 0;
}
